src/styles/index.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Roboto', sans-serif;
}





body {
  font-family: 'Inter', sans-serif;
  line-height: 1.5;
  color: #585858;
  background-color: #f0f4ff;
  background-image:
    repeating-linear-gradient(45deg,
      rgba(71, 99, 223, 0.05) 0px,
      rgba(71, 99, 223, 0.05) 1px,
      transparent 1px,
      transparent 20px);
  background-size: 100% 100%;

}


h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Poppins', sans-serif;
}


ul {
  list-style: none;
}

li {
  list-style: none;
}

/* NAVBAR STILE*/
.container-navbar {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 1000;
  display: flex;
  flex-direction: column;
  padding: 10px;
  border-radius: 0 0 10px 10px;

  background-color: #f0f4ff;
  background-image:
    repeating-linear-gradient(45deg,
      rgba(71, 99, 223, 0.05) 0px,
      rgba(71, 99, 223, 0.05) 1px,
      transparent 1px,
      transparent 20px);
  background-size: 100% 100%;
}

.no-scroll{
  overflow: hidden;
  height: 100vh;
}


.navbar-inner {
  display: flex;
  flex-direction: column;
  width: 100%;
}


.hamburger {
  display: block;
  font-size: 2rem;
  background: none;
  border: none;
  color: rgba(71, 99, 223, 0.95);
  cursor: pointer;
  align-self: flex-start;
}


.list-link-navbar {
  display: none;
  flex-direction: column;
  width: 100%;
  margin-top: 10px;
  padding: 0;
}

.list-link-navbar.open {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1rem;
  color: rgba(71, 99, 223, 0.95);
  width: 100%;
  height: 100vh;
  text-align: center;
  font-family: 'Roboto', sans-serif;
  font-size: 20px;
  margin: 0 auto;
  overflow-x: hidden;
}


.link-navbar {
  width: 100%;
  margin: 0 auto;
  display: flex;
  justify-content: center;
}

.link-navbar a {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  text-decoration: none;
  color: rgba(71, 99, 223, 0.95);
  font-size: 3rem;
  font-family: 'Poppins', sans-serif;
  text-align: center;
  font-weight: 700;

  border-radius: 12px;
  border: 2px solid rgba(128, 149, 243, 0.5);
  transition: all 0.2s ease;
  background-color: rgba(240, 244, 255, 0);
  width: auto;
  width: 90vw;
  white-space: nowrap;
  padding: 20px;
  margin: 0 auto;
  box-sizing: border-box;

}


.link-navbar a:hover {
  color: white;
  background-color: rgba(71, 99, 223, 0.95);
}




/*ABOUT STYLE*/

.container-profile {
  max-width: 600px;
  width: 95%;
  margin: 80px auto;
  border-radius: 10px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 10px;
  padding: 15px;
  background-color: rgba(71, 99, 223, 0.10);
}

.title-profile {
  font-size: 1.6rem;
  color: rgba(71, 99, 223, 0.95);
  text-align: center;
}

.container-skills {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 10px;
  width: 100%;
  padding: 10px;
  margin: 0 auto;
}

.description-about {
  width: 90%;
  margin: 0 auto;
  font-size: 1rem;
  text-align: center;
}

.container-all-about {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 10px;
  width: 100%;
  margin: 0 auto;
  gap: 20px;
}

.container-certificate {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.figure-certificate {
  padding: 10px;
  background-color: white;
  height: auto;
  margin-top: 40px;
  width: 95%;
  margin: 0 auto;
}

.img-certificate {
  width: 100%;
  border-radius: 10px;
}

.container-all-stack {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.list-front-stack,
.list-back-stack {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  gap: 15px;
  margin-top: 40px;
}

.li-stack {
  border-radius: 10px;
  background-color: #8194f3;
  padding: 8px;
  color: #f5f3f3;
}

.span-stack {
  margin-right: 5px;
}

/*HERO STYLE*/
.container-hero {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  max-width: 600px;
  margin: 0 auto;
  text-align: center;
  padding-top: 230px;
}

.container-img-name {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.name-user {
  font-size: 1.8rem;
}

.name-profession {
  font-size: 1.1rem;
}

.container-img-hero img {
  width: 160px;
  height: auto;
  display: block;
  transition: transform 0.3s ease;
  margin-bottom: 30px;
}

.container-img-hero img:hover {
  transform: scale(1.10);
}

.hero-divider {
  border: 0.1rem solid rgba(71, 99, 223, 0.7);
  width: 85%;
  margin: 30px 0;
}


.container-hero-info {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 20px;
  margin: 0 auto;
}

.container-hero-info p {
  font-size: 1rem;
  text-align: center;
  width: 90%;
  margin: 0 auto;
}

.btn-hero {
  background-color: rgba(71, 99, 223, 0.95);
  border-radius: 5px;
  padding: 10px;
  color: white;
  text-decoration: none;
  border: none;
}

.btn-hero:hover {
  background-color: rgb(5, 24, 105);
}



/*INTERACTIVE STYLE*/

.container-interactive {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 20px;
  width: 95%;
  max-width: 600px;
  margin: 0 auto;
  padding: 10px;
}

.container-card-interactive {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 20px;
  width: 95%;
  margin: 0 auto;
  border-radius: 10px;
  background-color: rgba(71, 99, 223, 0.10);
  padding: 10px;
}
/* ... */

